8268852: AsyncLogWriter should not overide is_Named_thread()

Reviewed-by: dholmes, ysuenaga